@@ -28,6 +28,8 @@ Release 0.4.1 - Unreleased
   HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)
 
   BUG FIXES
+  HCAT-409 MultiOutputformat should make getJobContext public
+
   HCAT-403 MultiOutputFormat will call taskCommit on all formats if only one ever needs commit (rohini via avandana)
 
   HCAT-400 HCatalog build fails from git checkout due to missing lib directory (traviscrawford via gates)
